<resources>
    <string name="mapbox_access_token">pk.eyJ1IjoiYW52aW5obHVvbmciLCJhIjoiY2w5bTcwcjJpMmM4djNwbW5waWZpYWRmdCJ9.9D7BI7KYGE9zqlxw8KcLUw</string>
    <string name="font_family_light" translatable="false">sans-serif-light</string>
    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
    <string name="font_family_regular" translatable="false">sans-serif</string>
    <string name="font_family_condensed" translatable="false">sans-serif-condensed</string>
    <string name="font_family_black" translatable="false">sans-serif-black</string>
    <string name="font_family_thin" translatable="false">sans-serif-thin</string>

    <string name="app_main_title">Home</string>
    <string name="app_file_to_large">File to large, please choose another file (Max width and height are 1000pixels, size must less than 1MB)</string>
    <string name="app_click_to_choose_image">Click to choose image</string>
    <string name="app_name">Product Management</string>
    <string name="app_first_hello">Hi there!</string>
    <string name="app_product">Product Management</string>
    <string name="app_login">Login</string>
    <string name="app_username">Username</string>
    <string name="app_password">Password</string>
    <string name="app_show_password">Show</string>
    <string name="app_hide_password">Hide</string>
    <string name="app_register">Register</string>
    <string name="app_forget_password">Forget Password?</string>
    <string name="app_welcome_message">Welcome, login to start new session!</string>
    <string name="app_back">Back</string>


    <string name="app_have_product_use">Have product use this category!</string>

    <string name="app_product_saved">Saved</string>

    <string name="app_login_success">Login successfully!</string>
    <string name="app_login_fail">Login fail, please check your username and password again!</string>
    <string name="app_empty_info">Fields cannot be empty</string>

    <string name="app_menu_about">About</string>
    <string name="app_menu_exit">Exit</string>
    <string name="app_menu_add">Add</string>
    <string name="app_menu_edit">Edit</string>
    <string name="app_menu_delete">Delete</string>
    <string name="app_button_save">Save</string>

    <string name="app_picture_from_gallery">Choose From Gallery</string>
    <string name="app_picture_from_camera">From Camera</string>

    <string name="app_dialog_title_exit">Confirm Exit</string>
    <string name="app_dialog_title_delete">Confirm Delete</string>
    <string name="app_dialog_message_exit">Are you sure you want to quit?</string>
    <string name="app_dialog_message_delete">Are you sure you want to delete this item?</string>
    <string name="app_dialog_success">Success</string>
    <string name="app_dialog_fail">Fail</string>
    <string name="app_dialog_confirm">Confirm</string>
    <string name="app_dialog_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_about_header">About me</string>
    <string name="app_about_name">Be Lang Duy</string>
    <string name="app_about_label_class">Class</string>
    <string name="app_about_class">D19_TH03</string>
    <string name="app_about_label_sid">Student ID</string>
    <string name="app_about_sid">DH51903060</string>
    <string name="app_about_label_email">Email</string>
    <string name="app_about_email">DH51903060@STUDENT.STU.EDU.VN</string>
    <string name="app_about_label_phone">Phone</string>
    <string name="app_about_phone">0337803128</string>
    <string name="app_about_label_map">Click to see</string>

    <string name="app_menu_category">Category</string>
    <string name="app_menu_product">Product</string>

    <string name="app_product_id">ID</string>
    <string name="app_product_name">Name</string>
    <string name="app_product_price">Price</string>
    <string name="app_product_net_weight">Net Weight</string>
    <string name="app_product_category_name">Category</string>
    <string name="app_product_category_origin">Origin</string>

    <string name="app_about_map">Map</string>
    <string name="app_public_key" translatable="false">pk.eyJ1ljoiYw52aW5obHVvbmciLCJhljoiY2w5bTcwcjJpMmM4djNwbW5waWZpYWRmdCJ9.9D7Bl7KYGE9zqlxw8KcLUw</string>
</resources>