<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_background_green2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvCategoryName"
                android:layout_width="0pt"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:text="@string/app_product_category_name"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edtMCategoryName"
                android:layout_width="0pt"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvCategoryName" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_background_green2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="0pt"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:text="@string/app_product_category_origin"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edtMCategoryOrigin"
                android:layout_width="0pt"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvProductPrice" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background_green2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnSaveCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="#C0F6F3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#C0F6F3"
            android:text="@string/app_button_save"
            android:textColor="#05ACA3"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>